Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> sentence_groups
Rule 2     sentence_groups -> EOS OPBR EOS sentence_group CLBR EOS
Rule 3     sentence_groups -> OPBR EOS sentence_group CLBR EOS
Rule 4     sentence_groups -> OPBR EOS sentence_group CLBR
Rule 5     sentence_groups -> EOS OPBR EOS sentence_group CLBR
Rule 6     sentence_groups -> EOS sentence
Rule 7     sentence_groups -> sentence
Rule 8     sentence_group -> sentence_group sentence
Rule 9     sentence_group -> sentence
Rule 10    sentence -> definition EOS
Rule 11    sentence -> if
Rule 12    sentence -> while
Rule 13    sentence -> if_err
Rule 14    sentence -> while_err
Rule 15    sentence -> procedure
Rule 16    sentence -> call_procedure EOS
Rule 17    sentence -> robot_command EOS
Rule 18    sentence -> map_setting EOS
Rule 19    sentence -> error
Rule 20    definition -> INT VARIABLE EQUAL math_expr
Rule 21    definition -> CINT VARIABLE EQUAL math_expr
Rule 22    definition -> BOOLEAN VARIABLE EQUAL logic_expr
Rule 23    definition -> CBOOLEAN VARIABLE EQUAL logic_expr
Rule 24    definition -> VARIABLE ASSIGN math_expr
Rule 25    definition -> VARIABLE ASSIGN logic_expr
Rule 26    definition -> MAP VARIABLE
Rule 27    math_expr -> INC math_first math_second
Rule 28    math_expr -> DEC math_first math_second
Rule 29    math_expr -> math_cmd empty
Rule 30    math_expr -> VARIABLE
Rule 31    math_expr -> number empty
Rule 32    number -> NUM
Rule 33    bool -> TRUE
Rule 34    bool -> FALSE
Rule 35    math_first -> math_expr
Rule 36    math_first -> call_procedure
Rule 37    math_second -> math_first
Rule 38    math_second -> logic_expr
Rule 39    logic_expr -> NOT logic_expr
Rule 40    logic_expr -> NOT call_procedure
Rule 41    logic_expr -> OR or_elem or_elem
Rule 42    logic_expr -> GT math_expr math_expr
Rule 43    logic_expr -> LT math_expr math_expr
Rule 44    logic_expr -> logic_cmd
Rule 45    logic_expr -> bool
Rule 46    or_elem -> logic_expr
Rule 47    or_elem -> call_procedure
Rule 48    procedure -> proc_name OPSQBR varlist CLSQBR sentence_groups
Rule 49    proc_name -> PROC VARIABLE
Rule 50    call_procedure -> VARIABLE OPSQBR varlist CLSQBR
Rule 51    varlist -> varlist VARIABLE
Rule 52    varlist -> VARIABLE
Rule 53    if_err -> IF error sentence_groups ELSE sentence_groups
Rule 54    if_err -> IF error sentence_groups
Rule 55    while_err -> WHILE error DO sentence_groups
Rule 56    while_err -> WHILE error
Rule 57    while_err -> WHILE logic_expr error
Rule 58    if -> IF logic_expr sentence_groups ELSE sentence_groups
Rule 59    if -> IF logic_expr sentence_groups
Rule 60    while -> WHILE logic_expr DO sentence_groups
Rule 61    robot_command -> logic_cmd
Rule 62    robot_command -> rot_dir
Rule 63    robot_command -> math_cmd
Rule 64    rot_dir -> BACK
Rule 65    rot_dir -> RIGHT
Rule 66    rot_dir -> LEFT
Rule 67    logic_cmd -> STEP
Rule 68    math_cmd -> LOOK
Rule 69    map_setting -> BAR OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
Rule 70    map_setting -> EMP OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
Rule 71    map_setting -> SET OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
Rule 72    map_setting -> CLR OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
Rule 73    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 24 25
BACK                 : 64
BAR                  : 69
BOOLEAN              : 22
CBOOLEAN             : 23
CINT                 : 21
CLBR                 : 2 3 4 5
CLR                  : 72
CLSQBR               : 48 50 69 70 71 72
DEC                  : 28
DO                   : 55 60
ELSE                 : 53 58
EMP                  : 70
EOS                  : 2 2 2 3 3 4 5 5 6 10 16 17 18
EQUAL                : 20 21 22 23
FALSE                : 34
GT                   : 42
IF                   : 53 54 58 59
INC                  : 27
INT                  : 20
LEFT                 : 66
LOOK                 : 68
LT                   : 43
MAP                  : 26
NOT                  : 39 40
NUM                  : 32
OPBR                 : 2 3 4 5
OPSQBR               : 48 50 69 70 71 72
OR                   : 41
PROC                 : 49
RIGHT                : 65
SET                  : 71
STEP                 : 67
TRUE                 : 33
VARIABLE             : 20 21 22 23 24 25 26 30 49 50 51 52 69 69 70 70 71 71 72 72
WHILE                : 55 56 57 60
error                : 19 53 54 55 56 57

Nonterminals, with rules where they appear

bool                 : 45
call_procedure       : 16 36 40 47
definition           : 10
empty                : 29 31
if                   : 11
if_err               : 13
logic_cmd            : 44 61
logic_expr           : 22 23 25 38 39 46 57 58 59 60
map_setting          : 18
math_cmd             : 29 63
math_expr            : 20 21 24 35 42 42 43 43 69 69 70 70 71 71 72 72
math_first           : 27 28 37
math_second          : 27 28
number               : 31
or_elem              : 41 41
proc_name            : 48
procedure            : 15
program              : 0
robot_command        : 17
rot_dir              : 62
sentence             : 6 7 8 9
sentence_group       : 2 3 4 5 8
sentence_groups      : 1 48 53 53 54 55 58 58 59 60
varlist              : 48 50 51
while                : 12
while_err            : 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . sentence_groups
    (2) sentence_groups -> . EOS OPBR EOS sentence_group CLBR EOS
    (3) sentence_groups -> . OPBR EOS sentence_group CLBR EOS
    (4) sentence_groups -> . OPBR EOS sentence_group CLBR
    (5) sentence_groups -> . EOS OPBR EOS sentence_group CLBR
    (6) sentence_groups -> . EOS sentence
    (7) sentence_groups -> . sentence
    (10) sentence -> . definition EOS
    (11) sentence -> . if
    (12) sentence -> . while
    (13) sentence -> . if_err
    (14) sentence -> . while_err
    (15) sentence -> . procedure
    (16) sentence -> . call_procedure EOS
    (17) sentence -> . robot_command EOS
    (18) sentence -> . map_setting EOS
    (19) sentence -> . error
    (20) definition -> . INT VARIABLE EQUAL math_expr
    (21) definition -> . CINT VARIABLE EQUAL math_expr
    (22) definition -> . BOOLEAN VARIABLE EQUAL logic_expr
    (23) definition -> . CBOOLEAN VARIABLE EQUAL logic_expr
    (24) definition -> . VARIABLE ASSIGN math_expr
    (25) definition -> . VARIABLE ASSIGN logic_expr
    (26) definition -> . MAP VARIABLE
    (58) if -> . IF logic_expr sentence_groups ELSE sentence_groups
    (59) if -> . IF logic_expr sentence_groups
    (60) while -> . WHILE logic_expr DO sentence_groups
    (53) if_err -> . IF error sentence_groups ELSE sentence_groups
    (54) if_err -> . IF error sentence_groups
    (55) while_err -> . WHILE error DO sentence_groups
    (56) while_err -> . WHILE error
    (57) while_err -> . WHILE logic_expr error
    (48) procedure -> . proc_name OPSQBR varlist CLSQBR sentence_groups
    (50) call_procedure -> . VARIABLE OPSQBR varlist CLSQBR
    (61) robot_command -> . logic_cmd
    (62) robot_command -> . rot_dir
    (63) robot_command -> . math_cmd
    (69) map_setting -> . BAR OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
    (70) map_setting -> . EMP OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
    (71) map_setting -> . SET OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
    (72) map_setting -> . CLR OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
    (49) proc_name -> . PROC VARIABLE
    (67) logic_cmd -> . STEP
    (64) rot_dir -> . BACK
    (65) rot_dir -> . RIGHT
    (66) rot_dir -> . LEFT
    (68) math_cmd -> . LOOK

    EOS             shift and go to state 3
    OPBR            shift and go to state 4
    error           shift and go to state 15
    INT             shift and go to state 16
    CINT            shift and go to state 18
    BOOLEAN         shift and go to state 19
    CBOOLEAN        shift and go to state 20
    VARIABLE        shift and go to state 17
    MAP             shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    BAR             shift and go to state 28
    EMP             shift and go to state 29
    SET             shift and go to state 30
    CLR             shift and go to state 31
    PROC            shift and go to state 32
    STEP            shift and go to state 33
    BACK            shift and go to state 34
    RIGHT           shift and go to state 35
    LEFT            shift and go to state 36
    LOOK            shift and go to state 37

    program                        shift and go to state 1
    sentence_groups                shift and go to state 2
    sentence                       shift and go to state 5
    definition                     shift and go to state 6
    if                             shift and go to state 7
    while                          shift and go to state 8
    if_err                         shift and go to state 9
    while_err                      shift and go to state 10
    procedure                      shift and go to state 11
    call_procedure                 shift and go to state 12
    robot_command                  shift and go to state 13
    map_setting                    shift and go to state 14
    proc_name                      shift and go to state 24
    logic_cmd                      shift and go to state 25
    rot_dir                        shift and go to state 26
    math_cmd                       shift and go to state 27

state 1

    (0) S' -> program .



state 2

    (1) program -> sentence_groups .

    $end            reduce using rule 1 (program -> sentence_groups .)


state 3

    (2) sentence_groups -> EOS . OPBR EOS sentence_group CLBR EOS
    (5) sentence_groups -> EOS . OPBR EOS sentence_group CLBR
    (6) sentence_groups -> EOS . sentence
    (10) sentence -> . definition EOS
    (11) sentence -> . if
    (12) sentence -> . while
    (13) sentence -> . if_err
    (14) sentence -> . while_err
    (15) sentence -> . procedure
    (16) sentence -> . call_procedure EOS
    (17) sentence -> . robot_command EOS
    (18) sentence -> . map_setting EOS
    (19) sentence -> . error
    (20) definition -> . INT VARIABLE EQUAL math_expr
    (21) definition -> . CINT VARIABLE EQUAL math_expr
    (22) definition -> . BOOLEAN VARIABLE EQUAL logic_expr
    (23) definition -> . CBOOLEAN VARIABLE EQUAL logic_expr
    (24) definition -> . VARIABLE ASSIGN math_expr
    (25) definition -> . VARIABLE ASSIGN logic_expr
    (26) definition -> . MAP VARIABLE
    (58) if -> . IF logic_expr sentence_groups ELSE sentence_groups
    (59) if -> . IF logic_expr sentence_groups
    (60) while -> . WHILE logic_expr DO sentence_groups
    (53) if_err -> . IF error sentence_groups ELSE sentence_groups
    (54) if_err -> . IF error sentence_groups
    (55) while_err -> . WHILE error DO sentence_groups
    (56) while_err -> . WHILE error
    (57) while_err -> . WHILE logic_expr error
    (48) procedure -> . proc_name OPSQBR varlist CLSQBR sentence_groups
    (50) call_procedure -> . VARIABLE OPSQBR varlist CLSQBR
    (61) robot_command -> . logic_cmd
    (62) robot_command -> . rot_dir
    (63) robot_command -> . math_cmd
    (69) map_setting -> . BAR OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
    (70) map_setting -> . EMP OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
    (71) map_setting -> . SET OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
    (72) map_setting -> . CLR OPSQBR VARIABLE VARIABLE math_expr math_expr CLSQBR
    (49) proc_name -> . PROC VARIABLE
    (67) logic_cmd -> . STEP
    (64) rot_dir -> . BACK
    (65) rot_dir -> . RIGHT
    (66) rot_dir -> . LEFT
    (68) math_cmd -> . LOOK

    OPBR            shift and go to state 38
    error           shift and go to state 15
    INT             shift and go to state 16
    CINT            shift and go to state 18
    BOOLEAN         shift and go to state 19
    CBOOLEAN        shift and go to state 20
    VARIABLE        shift and go to state 17
    MAP             shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    BAR             shift and go to state 28
    EMP             shift and go to state 29
    SET             shift and go to state 30
    CLR             shift and go to state 31
    PROC            shift and go to state 32
    STEP            shift and go to state 33
    BACK            shift and go to state 34
    RIGHT           shift and go to state 35
    LEFT            shift and go to state 36
    LOOK            shift and go to state 37

    sentence                       shift and go to state 39
    definition                     shift and go to state 6
    if                             shift and go to state 7
    while                          shift and go to state 8
    if_err                         shift and go to state 9
    while_err                      shift and go to state 10
    procedure                      shift and go to state 11
    call_procedure                 shift and go to state 12
    robot_command                  shift and go to state 13
    map_setting                    shift and go to state 14
    proc_name                      shift and go to state 24
    logic_cmd                      shift and go to state 25
    rot_dir                        shift and go to state 26
    math_cmd                       shift and go to state 27

state 4

    (3) sentence_groups -> OPBR . EOS sentence_group CLBR EOS
    (4) sentence_groups -> OPBR . EOS sentence_group CLBR

    EOS             shift and go to state 40


state 5

    (7) sentence_groups -> sentence .

    $end            reduce using rule 7 (sentence_groups -> sentence .)
    ELSE            reduce using rule 7 (sentence_groups -> sentence .)
    CLBR            reduce using rule 7 (sentence_groups -> sentence .)
    error           reduce using rule 7 (sentence_groups -> sentence .)
    INT             reduce using rule 7 (sentence_groups -> sentence .)
    CINT            reduce using rule 7 (sentence_groups -> sentence .)
    BOOLEAN         reduce using rule 7 (sentence_groups -> sentence .)
    CBOOLEAN        reduce using rule 7 (sentence_groups -> sentence .)
    VARIABLE        reduce using rule 7 (sentence_groups -> sentence .)
    MAP             reduce using rule 7 (sentence_groups -> sentence .)
    IF              reduce using rule 7 (sentence_groups -> sentence .)
    WHILE           reduce using rule 7 (sentence_groups -> sentence .)
    BAR             reduce using rule 7 (sentence_groups -> sentence .)
    EMP             reduce using rule 7 (sentence_groups -> sentence .)
    SET             reduce using rule 7 (sentence_groups -> sentence .)
    CLR             reduce using rule 7 (sentence_groups -> sentence .)
    PROC            reduce using rule 7 (sentence_groups -> sentence .)
    STEP            reduce using rule 7 (sentence_groups -> sentence .)
    BACK            reduce using rule 7 (sentence_groups -> sentence .)
    RIGHT           reduce using rule 7 (sentence_groups -> sentence .)
    LEFT            reduce using rule 7 (sentence_groups -> sentence .)
    LOOK            reduce using rule 7 (sentence_groups -> sentence .)


state 6

    (10) sentence -> definition . EOS

    EOS             shift and go to state 41


state 7

    (11) sentence -> if .

    $end            reduce using rule 11 (sentence -> if .)
    ELSE            reduce using rule 11 (sentence -> if .)
    CLBR            reduce using rule 11 (sentence -> if .)
    error           reduce using rule 11 (sentence -> if .)
    INT             reduce using rule 11 (sentence -> if .)
    CINT            reduce using rule 11 (sentence -> if .)
    BOOLEAN         reduce using rule 11 (sentence -> if .)
    CBOOLEAN        reduce using rule 11 (sentence -> if .)
    VARIABLE        reduce using rule 11 (sentence -> if .)
    MAP             reduce using rule 11 (sentence -> if .)
    IF              reduce using rule 11 (sentence -> if .)
    WHILE           reduce using rule 11 (sentence -> if .)
    BAR             reduce using rule 11 (sentence -> if .)
    EMP             reduce using rule 11 (sentence -> if .)
    SET             reduce using rule 11 (sentence -> if .)
    CLR             reduce using rule 11 (sentence -> if .)
    PROC            reduce using rule 11 (sentence -> if .)
    STEP            reduce using rule 11 (sentence -> if .)
    BACK            reduce using rule 11 (sentence -> if .)
    RIGHT           reduce using rule 11 (sentence -> if .)
    LEFT            reduce using rule 11 (sentence -> if .)
    LOOK            reduce using rule 11 (sentence -> if .)


state 8

    (12) sentence -> while .

    $end            reduce using rule 12 (sentence -> while .)
    ELSE            reduce using rule 12 (sentence -> while .)
    CLBR            reduce using rule 12 (sentence -> while .)
    error           reduce using rule 12 (sentence -> while .)
    INT             reduce using rule 12 (sentence -> while .)
    CINT            reduce using rule 12 (sentence -> while .)
    BOOLEAN         reduce using rule 12 (sentence -> while .)
    CBOOLEAN        reduce using rule 12 (sentence -> while .)
    VARIABLE        reduce using rule 12 (sentence -> while .)
    MAP             reduce using rule 12 (sentence -> while .)
    IF              reduce using rule 12 (sentence -> while .)
    WHILE           reduce using rule 12 (sentence -> while .)
    BAR             reduce using rule 12 (sentence -> while .)
    EMP             reduce using rule 12 (sentence -> while .)
    SET             reduce using rule 12 (sentence -> while .)
    CLR             reduce using rule 12 (sentence -> while .)
    PROC            reduce using rule 12 (sentence -> while .)
    STEP            reduce using rule 12 (sentence -> while .)
    BACK            reduce using rule 12 (sentence -> while .)
    RIGHT           reduce using rule 12 (sentence -> while .)
    LEFT            reduce using rule 12 (sentence -> while .)
    LOOK            reduce using rule 12 (sentence -> while .)


state 9

    (13) sentence -> if_err .

    $end            reduce using rule 13 (sentence -> if_err .)
    ELSE            reduce using rule 13 (sentence -> if_err .)
    CLBR            reduce using rule 13 (sentence -> if_err .)
    error           reduce using rule 13 (sentence -> if_err .)
    INT             reduce using rule 13 (sentence -> if_err .)
    CINT            reduce using rule 13 (sentence -> if_err .)
    BOOLEAN         reduce using rule 13 (sentence -> if_err .)
    CBOOLEAN        reduce using rule 13 (sentence -> if_err .)
    VARIABLE        reduce using rule 13 (sentence -> if_err .)
    MAP             reduce using rule 13 (sentence -> if_err .)
    IF              reduce using rule 13 (sentence -> if_err .)
    WHILE           reduce using rule 13 (sentence -> if_err .)
    BAR             reduce using rule 13 (sentence -> if_err .)
    EMP             reduce using rule 13 (sentence -> if_err .)
    SET             reduce using rule 13 (sentence -> if_err .)
    CLR             reduce using rule 13 (sentence -> if_err .)
    PROC            reduce using rule 13 (sentence -> if_err .)
    STEP            reduce using rule 13 (sentence -> if_err .)
    BACK            reduce using rule 13 (sentence -> if_err .)
    RIGHT           reduce using rule 13 (sentence -> if_err .)
    LEFT            reduce using rule 13 (sentence -> if_err .)
    LOOK            reduce using rule 13 (sentence -> if_err .)


state 10

    (14) sentence -> while_err .

    $end            reduce using rule 14 (sentence -> while_err .)
    ELSE            reduce using rule 14 (sentence -> while_err .)
    CLBR            reduce using rule 14 (sentence -> while_err .)
    error           reduce using rule 14 (sentence -> while_err .)
    INT             reduce using rule 14 (sentence -> while_err .)
    CINT            reduce using rule 14 (sentence -> while_err .)
    BOOLEAN         reduce using rule 14 (sentence -> while_err .)
    CBOOLEAN        reduce using rule 14 (sentence -> while_err .)
    VARIABLE        reduce using rule 14 (sentence -> while_err .)
    MAP             reduce using rule 14 (sentence -> while_err .)
    IF              reduce using rule 14 (sentence -> while_err .)
    WHILE           reduce using rule 14 (sentence -> while_err .)
    BAR             reduce using rule 14 (sentence -> while_err .)
    EMP             reduce using rule 14 (sentence -> while_err .)
    SET             reduce using rule 14 (sentence -> while_err .)
    CLR             reduce using rule 14 (sentence -> while_err .)
    PROC            reduce using rule 14 (sentence -> while_err .)
    STEP            reduce using rule 14 (sentence -> while_err .)
    BACK            reduce using rule 14 (sentence -> while_err .)
    RIGHT           reduce using rule 14 (sentence -> while_err .)
    LEFT            reduce using rule 14 (sentence -> while_err .)
    LOOK            reduce using rule 14 (sentence -> while_err .)


state 11

    (15) sentence -> procedure .

    $end            reduce using rule 15 (sentence -> procedure .)
    ELSE            reduce using rule 15 (sentence -> procedure .)
    CLBR            reduce using rule 15 (sentence -> procedure .)
    error           reduce using rule 15 (sentence -> procedure .)
    INT             reduce using rule 15 (sentence -> procedure .)
    CINT            reduce using rule 15 (sentence -> procedure .)
    BOOLEAN         reduce using rule 15 (sentence -> procedure .)
    CBOOLEAN        reduce using rule 15 (sentence -> procedure .)
    VARIABLE        reduce using rule 15 (sentence -> procedure .)
    MAP             reduce using rule 15 (sentence -> procedure .)
    IF              reduce using rule 15 (sentence -> procedure .)
    WHILE           reduce using rule 15 (sentence -> procedure .)
    BAR             reduce using rule 15 (sentence -> procedure .)
    EMP             reduce using rule 15 (sentence -> procedure .)
    SET             reduce using rule 15 (sentence -> procedure .)
    CLR             reduce using rule 15 (sentence -> procedure .)
    PROC            reduce using rule 15 (sentence -> procedure .)
    STEP            reduce using rule 15 (sentence -> procedure .)
    BACK            reduce using rule 15 (sentence -> procedure .)
    RIGHT           reduce using rule 15 (sentence -> procedure .)
    LEFT            reduce using rule 15 (sentence -> procedure .)
    LOOK            reduce using rule 15 (sentence -> procedure .)


state 12

    (16) sentence -> call_procedure . EOS

    EOS             shift and go to state 42


state 13

    (17) sentence -> robot_command . EOS

    EOS             shift and go to state 43


state 14

    (18) sentence -> map_setting . EOS

    EOS             shift and go to state 44


state 15

    (19) sentence -> error .

    $end            reduce using rule 19 (sentence -> error .)
    ELSE            reduce using rule 19 (sentence -> error .)
    CLBR            reduce using rule 19 (sentence -> error .)
    error           reduce using rule 19 (sentence -> error .)
    INT             reduce using rule 19 (sentence -> error .)
    CINT            reduce using rule 19 (sentence -> error .)
    BOOLEAN         reduce using rule 19 (sentence -> error .)
    CBOOLEAN        reduce using rule 19 (sentence -> error .)
    VARIABLE        reduce using rule 19 (sentence -> error .)
    MAP             reduce using rule 19 (sentence -> error .)
    IF              reduce using rule 19 (sentence -> error .)
    WHILE           reduce using rule 19 (sentence -> error .)
    BAR             reduce using rule 19 (sentence -> error .)
    EMP             reduce using rule 19 (sentence -> error .)
    SET             reduce using rule 19 (sentence -> error .)
    CLR             reduce using rule 19 (sentence -> error .)
    PROC            reduce using rule 19 (sentence -> error .)
    STEP            reduce using rule 19 (sentence -> error .)
    BACK            reduce using rule 19 (sentence -> error .)
    RIGHT           reduce using rule 19 (sentence -> error .)
    LEFT            reduce using rule 19 (sentence -> error .)
    LOOK            reduce using rule 19 (sentence -> error .)


state 16

    (20) definition -> INT . VARIABLE EQUAL math_expr

    VARIABLE        shift and go to state 45


state 17

    (24) definition -> VARIABLE . ASSIGN math_expr
    (25) definition -> VARIABLE . ASSIGN logic_expr
    (50) call_procedure -> VARIABLE . OPSQBR varlist CLSQBR

    ASSIGN          shift and go to state 46
    OPSQBR          shift and go to state 47


state 18

    (21) definition -> CINT . VARIABLE EQUAL math_expr

    VARIABLE        shift and go to state 48


state 19

    (22) definition -> BOOLEAN . VARIABLE EQUAL logic_expr

    VARIABLE        shift and go to state 49


state 20

    (23) definition -> CBOOLEAN . VARIABLE EQUAL logic_expr

    VARIABLE        shift and go to state 50


state 21

    (26) definition -> MAP . VARIABLE

    VARIABLE        shift and go to state 51


state 22
